# docchat

./: .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: __init__.py  chain.py  embeddings.py  ingestion.py
tests/: conftest.py  test_chain.py  test_ingestion.py
